-----------
FRUIT 3.3.4
-----------

When tester routines are added to *_test.f90,
fruit_basket_gen.f90 is updated.
But when tester routine(s) were removed,
fruit_basket_gen.f90 was not updated.
This problem is fixed in FRUIT 3.3.4.


-----------
FRUIT 3.3.3
-----------

Time stamp of fruit_basket_gen.f90 and fruit_driver_gen.f90
are kept when their content does not change.
This behavior surpresses unnecessary re-compile and saves your time.


-----------
FRUIT 3.3.2
-----------

In assert_not_equals subroutines,
inequality comparison for real numbers
  if (real_number_1 /= real_number_2) then ...
was used. 
(gfortran 4.8.2 with -Wextra option warns about it.)
The inequality is replaced by inequalities
  if (real_1 < real_2 .or. real_1 > real_2) then...


-----------
FRUIT 3.3.1
-----------

Unnecessary mpi_machine_file were included in fruit_3.3.0.zip.
Removed them.


-----------
FRUIT 3.3.0
-----------

FRUIT 3.3.0 can test codes using MPI.
Sample is in directry sample_mpi.
Test code is in self_test_mpi.
  
Tested on
  Ubuntu 12.04 + OpenMPI
  Windows 7 + MPICH2 (mpich2-1.4.1p1-win-ia32)


-----------
FRUIT 3.2.6
-----------

assert_false added.

When execution of test stops before regular exit,
"result.xml" that reports one failure is generated.
(So far, "result.xml" of previous run remained
 that usually reports no error.)


-----------
FRUIT 3.2.5
-----------

Description of samples are added to README.

doc/changes.txt is moved to CHANGES.txt

sample_selective/rakefile directly reads src/fruit.f90, src/fruit_util.f90.


-----------
FRUIT 3.2.4
-----------

On FTN95 output to "result.xml" become available.

Prefix for "classname" within result.xml can be
specified by writing

      fp.xml_prefix = "some_string. "

within rakefile.
See self_test/rakefile for example.
When Jenkins ( http://jenkins-ci.org/ ) reads this "result.xml" as JUnit result,
the prefix until period is treated as package name.
