@@ -1,0 +1,6 @@
+module some_module
+contains
+  subroutine print_one
+    print *, "1"
+  end subroutine print_one
+end module some_module
